--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,9 @@
     <string name="reset_password">Reset password</string>
     <string name="forgot_your_password">Get a new one!</string>
     <string name="logout">Log out</string>
-    <string name="my_profile">My Profile</string>
-    <string name="my_resume">My Resume</string>
+    <string name="profile">Profile</string>
     <string name="trip">Trip</string>
-    <string name="event">Event</string>
+    <string name="event">Events</string>
 
     <!-- Drawer Accessibility Hints -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
