--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="date_string">%d %s</string>
     <string name="pre_event_form">Pre Event Form</string>
     <string name="post_event_form">Post Event Form</string>
+    <string name="google_maps_unavailable">You need to have Google Maps installed.</string>
 </resources>
