--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Studs</string>
-    <string name="email">Email</string>
-    <string name="studs">Studs</string>
+    <string name="email" translatable="false">Email</string>
+    <string name="studs" translatable="false">Studs</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="forgot_password">Forgot password</string>
@@ -15,17 +15,18 @@
     <string name="trip">Trip</string>
     <string name="event">Events</string>
 
-    <!-- Drawer Accessibility Hints -->
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="upcoming">Upcoming</string>
-    <string name="past">Past</string>
-    <string name="date_string">%d %s</string>
+    <string name="date_string" translatable="false">%d %s</string>
     <string name="pre_event_form">Pre Event Form</string>
     <string name="post_event_form">Post Event Form</string>
     <string name="google_maps_unavailable">You need to have Google Maps installed.</string>
-    <string name="notification_channel_id">fcm-notifications</string>
+    <string name="notification_channel_id" translatable="false">fcm-notifications</string>
+
+    <string name="event_time_placeholder" translatable="false">%s - %s</string>
+    <string name="reset_password_message">Reset password email has been sent</string>
+    <string name="generic_error_message">Hmm, something went wrong. Please try again.</string>
+    <string name="enter_valid_email">Please enter a valid email</string>
+    <string name="no_description_available">No description available</string>
+
+    <!-- API Keys -->
+    <string name="maps_api_key" translatable="false">Enter key here</string>
 </resources>
