--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="generic_error_message">Hmm, something went wrong. Please try again.</string>
     <string name="enter_valid_email">Please enter a valid email</string>
     <string name="no_description_available">No description available</string>
+    <string name="send_notifications">Send Push Notifications</string>
 </resources>
