--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -23,4 +23,5 @@
     <string name="send_notifications">Skicka pushnotiser</string>
     <string name="upcoming_events">Kommande event</string>
     <string name="past_events">Tidigare event</string>
+    <string name="next_event">Nästa event</string>
 </resources>
