--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,7 @@
     <string name="travel_info">Travel Info</string>
     <string name="share_current_location">Share current location</string>
     <string name="enter_message">Enter message</string>
+    <string name="notification_settings">Notification Settings</string>
+    <string name="contacts">Contacts</string>
+    <string name="housing">Housing</string>
 </resources>
