code refactoring + updates event list/details design

--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -18,6 +18,7 @@
     <string name="past_events">Tidigare events</string>
     <string name="next_event">Nästa event</string>
     <string name="no_description_available">Ingen beskrivning tillgänglig</string>
+    <string name="no_location_available">Ingen plats angiven</string>
 
     <!-- Profile/Settings-->
     <string name="profile">Profil</string>
