--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -28,4 +28,8 @@
     <string name="trip">Resa</string>
     <string name="tr_countdown1">Det är endast</string>
     <string name="tr_countdown2">dagar kvar till livets resa!</string>
+
+    <!-- Widget-->
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
