--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,9 @@
     <!-- Preference keys-->
     <string name="live_location_preference_key" translatable="false">share_live_location_key</string>
     <string name="darkmode_preference" translatable="false">darkmode_preference</string>
+
+    <!-- Widget-->
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+
 </resources>
