--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -31,11 +31,6 @@
     <string name="tr_countdown2">dagar kvar till livets resa!</string>
 
     <!-- Widget-->
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
-    <string name="widget_countdown">Om X dagar</string>
-    <string name="widget_today">Idag</string>
-    <string name="widget_tomorrow">Imorgon</string>
-    <string name="widget_countdown_in">Om</string>
-    <string name="widget_countdown_days">dagar</string>
+    <string name="widget_no_time">Okänd tid</string>
+
 </resources>
