Updates create mutation

--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -34,7 +34,7 @@
     <string name="happenings_add">Lägg till happening</string>
     <string name="happenings_location">Plats</string>
     <string name="happenings_description">Beskrivning</string>
-    <string name="happenings_participants">Deltagare</string>
+    <string name="happenings_buddies">Polare</string>
 
     <!-- Trip -->
     <string name="trip">Resa</string>
